--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "minimal-notebook"]
 	path = minimal-notebook
 	url = https://github.com/thoth-station/s2i-minimal-notebook
+[submodule "tensorflow-notebook"]
+	path = tensorflow-notebook
+	url = https://github.com/thoth-station/s2i-tensorflow-notebook
